# auto_step

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  THANKS  configure  configure.ac  reconf
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile  Makefile.am  Makefile.in
doc/butterworth/: bilinear_pre_warp.m  design_butterworth_filter.m  octave-core  sequence.m
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  auto_step  auto_step.cc  bar_simple_line.cc  bar_simple_line.h  config.cc  config.h  haar.cc  haar.h  instrument.h  note.cc  note.h  player.cc  player.h  sound.cc  tnt_ext.h
src/instruments/: filter.cc  filter.h  note_envelope.cc  note_envelope.h  sawtooth.cc  sawtooth.h  sine_wave.cc  sine_wave.h  square_wave.cc  square_wave.h
src/instruments/filters/: band_pass_butterworth.cc  band_pass_butterworth.h  modulator.cc  modulator.h
