# Copyright (C) 2012 John Cant <a.johncant@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

  
bin_PROGRAMS = auto_step
EXTRA_PROGRAMS = auto_step
auto_step_LDADD = -lpulse-simple
auto_step_SOURCES = auto_step.cc haar.cc config.cc bar_simple_line.cc instruments/sine_wave.cc instruments/square_wave.cc
